--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     
-    <div style="position: sticky; top: 0; text-align: center; width: 100%; padding-bottom: 3px; padding-top: 10px; font-size: 2rem; z-index: 5;" class="head"><div style="grid-column: 2/3; grid-row: 0;">Capolavoro</div></div> <!-- forse posso mettere una grid, mettere un trattino sotto? Provare a ca,biare lo z-index-->
+    <div style="position: sticky; top: 0; text-align: center; width: auto; padding-bottom: 3px; padding-top: 10px; font-size: 2rem; z-index: 5;" class="head"><div style="grid-column: 2/3; grid-row: 0;">Capolavoro</div></div> <!-- forse posso mettere una grid, mettere un trattino sotto? Provare a ca,biare lo z-index-->
     <div class="profile">
         <img src="profilo.png"  class="foto">
         <div>
