--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="majorEntity">
        <div class="project">
             <div class="content">
-                <video width="100%" height="100%" >
+                <video playsinline width="100%" height="100%" >
                     <source src="video1.mp4" type="video/mp4">
                 </video>
                 <p class="description">
