--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <p class="description">
                     <span class="title">Perlin Noise </br> </span>
                     <sspan class="discorso">Un campo di vettori su cui delle particelle simulate si muovono in base alla direzione del vettore nella loro posizione. </br>
-                                            Il campo di vettori è genenerato attraverso il Perlin Noise, una funzione che generatrice di un curva che assume valori casuali ma intercollegati tra di loro. Spostandosi avanti e dietro per la vurva i valori che otteniamo sono uno vicino all'altro.</br>
-                                            In questo modo il campo di vettori, pur essendo diverso ogni volta che ricariachiamo la pagina in quanto la funzione di Perlin cambia, appare fluido ed elegante, in contrasto al caos generato invece da una funzione random.</span>
+                                            Il campo di vettori è generato attraverso il Perlin Noise, una funzione che genera una curva che assume valori casuali ma collegati tra loro. Spostandosi lungo la vurva i valori che otteniamo sono vicini tra di loro.</br>
+                                            In questo modo il campo di vettori, pur essendo diverso ogni volta che ricariachiamo la pagina in quanto la funzione di Perlin Noise cambia, appare fluido ed elegante, in contrasto al caos generato da una funzione random.</span>
                 </p>
             </div>
             <div class="line"></div>
@@ -50,7 +50,7 @@
                 <p class="description">
                     <span class="title">Idiomi di Shakespeare</br> </span>
                     <sspan class="discorso">Un sito con uno scopo pratico. Lo scorso anno (2022/23) abbiamo studiato Shakespeare e ci siamo soffermati su tutti quei modi di dire inglesi che derivano dal suo genio. Per aiutarmi a studiarli, ho creato un sito che mostra gli idiomi e la loro traduzione. <br>
-                                            Si può decidere se ad essere mostrata sia il modo di dire in inglese o italiano, inoltre ho creato pure una sorta di modalità "gioco" dove ci si può allenare a indovinarli.</span>
+                                            Si può decidere se mostrare il modo di dire in inglese o in italiano; inoltre, ho creato anche una sorta di modalità "gioco" dove ci si può allenare a indovinarli.</span>
                 </p>
             </div>
             <div class="line"></div>
@@ -62,7 +62,7 @@
                 </video>
                 <p class="description">
                     <span class="title">Scritta led</br> </span>
-                    <sspan class="discorso">Il sito è molto semplice ed è composto da una scritta che dovrebbe simulare quelle led dei locali. Con il pulsante si può spegnere ed accendere, mentre con la barra laterale si regola la luminosità. Inoltre la scritta presenta anche un effetto di flickering.</span>
+                    <span class="discorso">Il sito è molto semplice ed è composto da una scritta che dovrebbe simulare quelle a LED dei locali. Con il pulsante si può spegnere e accendere, mentre con la barra laterale si regola la luminosità. Inoltre, la scritta presenta anche un effetto di flickering.</span>
                 </p>
             </div>
             <div class="line"></div>
@@ -74,7 +74,7 @@
                 </video>
                 <p class="description">
                     <span class="title">3D engine</br> </span>
-                    <sspan class="discorso">Pur essendo apparentemente molto semplice questo progetto è in realtà il più complesso. Si tratta di un minuscolo motore grafico creato partendo da un libreria che permette di disegnare linee su una finsetra. L'idea dietro è quella di creare tanti piccoli triangoli che unendosi formano la figura. Ogni triangolo ha 3 vertici con coordinate x, y e z. Ogni punto subisce una trasmorazione attraverso una matrice che proietta una figura tridimensionale su uno schermo a due dimensioni. <br>
+                    <sspan class="discorso">Pur essendo apparentemente molto semplice, questo progetto è in realtà il più complesso. Si tratta di un minuscolo motore grafico creato partendo da una libreria che permette di disegnare linee su una finestra. L'idea dietro è quella di creare tanti piccoli triangoli che, unendosi, formano la figura. Ogni triangolo ha tre vertici con coordinate x, y e z. Ogni punto subisce una trasformazione attraverso una matrice che proietta una figura tridimensionale su uno schermo a due dimensioni. <br>
                                             Bisogna anche tenere conto della posizione della camera, che sarebbe il punto da cui noi guardiamo la scena. <br>
                                             Per far ruotare la piramide ho sempre usato una matrice di rotazione.</span>
                 </p>
