--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <p class="description">
                     <span class="title">Perlin Noise </br> </span>
                     <sspan class="discorso">Un campo di vettori su cui delle particelle simulate si muovono in base alla direzione del vettore nella loro posizione. </br>
-                                            Il campo di vettori è generato attraverso il Perlin Noise, una funzione che genera una curva che assume valori casuali ma collegati tra loro. Spostandosi lungo la vurva i valori che otteniamo sono vicini tra di loro.</br>
-                                            In questo modo il campo di vettori, pur essendo diverso ogni volta che ricariachiamo la pagina in quanto la funzione di Perlin Noise cambia, appare fluido ed elegante, in contrasto al caos generato da una funzione random.</span>
+                                            Il campo di vettori è generato attraverso il Perlin Noise, una funzione che genera una curva che assume valori casuali ma collegati tra loro. Spostandosi lungo la curva i valori che otteniamo sono vicini tra di loro.</br>
+                                            In questo modo il campo di vettori, pur essendo diverso ogni volta che si ricarica la pagina in quanto la funzione di Perlin Noise cambia, appare fluido ed elegante, in contrasto al caos generato da una funzione random.</span>
                 </p>
             </div>
             <div class="line"></div>
